--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,19 @@ Homestead.json
 
 # Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
+
+_ide_helper.php
+.idea
+".idea"
+.idea/*
+".idea/*"
+.idea/workspace.xml
+".idea/workspace.xml"
+# User-specific stuff
+.idea/**/workspace.xml
+".idea/**/workspace.xml"
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
