--- a/.env.pusher
+++ b/.env.pusher
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:+qaAKeI28CRFAiVaJER7zB9c6hwDRSVdKwcxIuClDUY=
+APP_KEY=base64:jz4OQJdh/rOtJ5NdzFU7enacVxcRtidYF0n+3O0tW6c=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://http://localhost/alamraya/mutiaraberlian
 
 LOG_CHANNEL=stack
 
@@ -30,10 +30,10 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_ID=855424
+PUSHER_APP_KEY=c1467ff4f1324286cb33
+PUSHER_APP_SECRET=9774865a34cb9bdbf655
+PUSHER_APP_CLUSTER=ap1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
